--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
     </section>
       
     <section class="nav-right">
-        <img src="./images/icon-cart.svg" alt="icon-cart">
+        <img src="./images/icon-cart.svg" alt="icon-cart" class="cart">
         <img src="./images/image-avatar.png" alt="icon-avatar">
     </section>
+
+    <span class="cart-badge">0</span>
   </nav>
 
   <main class="container">
@@ -45,10 +47,10 @@
           <img src="./images/icon-next.svg" alt="image-previous">
         </div>
         <div class="img-section-2">
-          <img src="./images/image-product-1-thumbnail.jpg" alt="image-product-1-thumbnail">
-          <img src="./images/image-product-2-thumbnail.jpg" alt="image-product-2-thumbnail">
-          <img src="./images/image-product-3-thumbnail.jpg" alt="image-product-3-thumbnail">
-          <img src="./images/image-product-4-thumbnail.jpg" alt="image-product-4-thumbnail">
+          <img src="./images/image-product-1-thumbnail.jpg" alt="image-product-1-thumbnail" class="main-thumb thumbnail">
+          <img src="./images/image-product-2-thumbnail.jpg" alt="image-product-2-thumbnail" class="thumbnail">
+          <img src="./images/image-product-3-thumbnail.jpg" alt="image-product-3-thumbnail" class="thumbnail">
+          <img src="./images/image-product-4-thumbnail.jpg" alt="image-product-4-thumbnail" class="thumbnail">
         </div>
       </article>
 
@@ -65,9 +67,9 @@
 
         <div class="cart-section">
           <div class="counter">
-            <img src="./images/icon-minus.svg" alt="icon-minus">
-            <p>0</p>
-            <img src="./images/icon-plus.svg" alt="icon-plus">
+            <img src="./images/icon-minus.svg" alt="icon-minus" class="icon-minus">
+            <p class="counter-text">0</p>
+            <img src="./images/icon-plus.svg" alt="icon-plus" class="icon-plus">
           </div>
           <button><img src="./images/icon-cart.svg" alt="icon-cart"> Add to cart</button>
         </div>
@@ -80,17 +82,8 @@
     Coded by <a href="https://github.com/noobdev08" target="_blank">noobdev08</a>.
   </footer>
 
-  <script>
-    document.querySelector('.hamburger').addEventListener('click', () => {
-    document.querySelector('.nav-left ul').classList.add('active');
-    document.querySelector('.overlay').classList.add('active');
-  });
+  <div class="overlay"></div>
 
-  document.querySelector('.close-hamburger').addEventListener('click', () => {
-    document.querySelector('.nav-left ul').classList.remove('active');
-    document.querySelector('.overlay').classList.remove('active');
-  });
-</script>
+  <script src="./script.js"></script>
 </body>
-<div class="overlay"></div>
 </html>
