--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
     <section class="nav-right">
         <img src="./images/icon-cart.svg" alt="icon-cart" class="cart">
         <img src="./images/image-avatar.png" alt="icon-avatar">
+        <!-- Cart -->
+        <div class="cart-show">
+          <h3>Cart</h3>
+          <div class="inner-cart">
+            <p>Your Cart is empty</p>
+          </div>
+        </div>
     </section>
 
     <span class="cart-badge">0</span>
@@ -46,6 +53,21 @@
           <img src="./images/icon-previous.svg" alt="image-previous">
           <img src="./images/icon-next.svg" alt="image-previous">
         </div>
+        <!-- Lightbox -->
+      <div class="lightbox">
+        <div class="lightbox-content">
+          <img src="./images/icon-close.svg" alt="close" class="lightbox-close">
+          <img src="./images/icon-previous.svg" alt="prev" class="lightbox-prev">
+          <img src="./images/icon-next.svg" alt="next" class="lightbox-next">
+          <img src="./images/image-product-1.jpg" alt="big" class="lightbox-img">
+          <div class="lightbox-thumbs">
+            <img src="./images/image-product-1-thumbnail.jpg" class="thumb-active">
+            <img src="./images/image-product-2-thumbnail.jpg">
+            <img src="./images/image-product-3-thumbnail.jpg">
+            <img src="./images/image-product-4-thumbnail.jpg">
+          </div>
+        </div>
+      </div>
         <div class="img-section-2">
           <img src="./images/image-product-1-thumbnail.jpg" alt="image-product-1-thumbnail" class="main-thumb thumbnail">
           <img src="./images/image-product-2-thumbnail.jpg" alt="image-product-2-thumbnail" class="thumbnail">
